# Chess

./: .gitignore  CMakeLists.txt
src/Client/: Client.cpp  Client.h
src/Client/Entities/: Board.cpp  Board.h  IDrawable.h
src/Client/Renderers/: IRenderer.h  SDLRenderer.cpp  SDLRenderer.h
src/Client/Window/: IWindow.h  SDLWindow.cpp  SDLWindow.h
src/Server/: Server.cpp
src/Shared/Game/: BoardState.h
src/Shared/Utils/: RGB.h  Vec2.h
